rust/examples/variables/immutable-string/out.out
error[E0384]: cannot assign twice to immutable variable `text`
 --> examples/intro/hello_world_in_immutable_variable.rs:4:5
  |
2 |     let text = "Hello World!";
  |         ----
  |         |
  |         first assignment to `text`
  |         help: consider making this binding mutable: `mut text`
3 |     println!("{}", text);
4 |     text = "Something else";  // cannot assign twice to immutable variable
  |     ^^^^^^^^^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
